--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,13 +10,13 @@ import Skill from "~/components/home/Skill.astro";
 
 <Layout>
   <div class="w-[95%] max-w-6xl container mx-auto">
-    <Profile client:visible />
+    <Profile />
 
-    <About client:visible />
+    <About />
 
-    <Project client:visible />
+    <Project />
 
-    <Skill client:visible />
+    <Skill />
   </div>
 </Layout>
 <style>
